erDiagram
    AppUser ||--o| Artist : "herite JOINED"
    Artist ||--o| Wallet : "OneToOne"
    Wallet ||--o{ WalletTransaction : "OneToMany"
    Artist ||--o| Subscription : "OneToOne"
    Artist ||--o{ Artwork : "artistId"
    Artwork ||--o{ ArtworkImage : "OneToMany"
    Artwork ||--o{ ArtworkVideo : "OneToMany"
    Artwork ||--o{ ArtworkLike : "likes"
    Artwork ||--o{ ArtworkComment : "comments"
    Product ||--o| Artwork : "OneToOne optionnel"
    Artist ||--o{ Product : "artistId"
    Order ||--o{ OrderItem : "OneToMany"
    AppUser ||--o{ Order : "buyerId"
    Event ||--o{ Reservation : "ManyToOne"
    Reservation ||--o| Ticket : "OneToOne"
    AppUser ||--o{ Reservation : "userId"
    Payment }o--|| Order : "reference ORDER"
    Payment }o--|| Reservation : "reference RESERVATION"
    ChatMessage }o--|| AppUser : "sender"
    ChatMessage }o--|| AppUser : "recipient"
